--- a/aprendiendo-vue/package.json
+++ b/aprendiendo-vue/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "router": "^1.3.7",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.2"
+    "vue-axios": "^3.4.1",
+    "vue-router": "^4.1.2",
+    "vuelidate": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
